Update .env file

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -57,10 +57,37 @@
 		
 	</div>
 </div>
-
-
-
-
+<!-- <div>
+	<div>
+		use the following credential to login as staff
+	</div>
+	<div class="d-flex">
+		<div>
+			<span class="text-primary">institutional email </span>
+			<span> tchapi@ubuea.cm </sapn>
+		</div>
+		<div class="ml-5">
+			<span class="text-primary">institutional email </span>
+			<span> tchapi@ubuea.cm </sapn>
+		</div>
+		<span class="text-primary">institutional email </span>
+		<span> tchapi@ubuea.cm </sapn>
+	</div>
+	<div class="ml-5">
+		<span class="text-primary">institutional email </span>
+		<span> mawoh@ubuea.cm </sapn>
+	</div>
+	<span class="text-primary">institutional email </span>
+	<span> shu@ubuea.cm </sapn>
+</div>
+<div class="ml-5">
+	<span>institutional email </span>
+	<span> tchapi@ubuea.cm </sapn>
+</div>
+	</div>
+	use the following 
+</div>
+</div> -->
 
 
 {% endblock content %}
