--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -21,8 +21,12 @@
     border-top-left-radius: 0;
     border-top-right-radius: 0;
   }
-
-
+  .email__font__weight{
+	  font-weight: 900;
+  }
+.email__padding {
+	padding-left: 20px;
+}
 </style>
 
 <div class="container-fluid mt-5">
@@ -57,37 +61,39 @@
 		
 	</div>
 </div>
-<!-- <div>
+<h3 class="text-center text-success">To login as staff use use one of the following credentails</h3>
+<div class="d-flex justify-content-center">
 	<div>
-		use the following credential to login as staff
-	</div>
-	<div class="d-flex">
-		<div>
-			<span class="text-primary">institutional email </span>
-			<span> tchapi@ubuea.cm </sapn>
+		<span class=" text-primary email__font__weight">	email: </span> <span>fleur@ubuea.cm</span>
 		</div>
-		<div class="ml-5">
-			<span class="text-primary">institutional email </span>
-			<span> tchapi@ubuea.cm </sapn>
+		<div><span class="text-primary email__font__weight email__padding">password:</span> <span>testuser/2022</span></div>
+</div>
+<div class="d-flex justify-content-center">
+	<div>
+		<span class="text-primary email__font__weight">	email: </span> <span>mawoh@ubuea.cm</span>
 		</div>
-		<span class="text-primary">institutional email </span>
-		<span> tchapi@ubuea.cm </sapn>
-	</div>
-	<div class="ml-5">
-		<span class="text-primary">institutional email </span>
-		<span> mawoh@ubuea.cm </sapn>
-	</div>
-	<span class="text-primary">institutional email </span>
-	<span> shu@ubuea.cm </sapn>
+		<div><span class="text-primary email__font__weight email__padding">password:</span> <span>testuser/2022</span></div>
 </div>
-<div class="ml-5">
-	<span>institutional email </span>
-	<span> tchapi@ubuea.cm </sapn>
+<h3 class="text-center text-success">To login as student use use one of the following credentails</h3>
+<div class="d-flex justify-content-center">
+	<div>
+		<span class="text-primary email__font__weight">	email: </span> <span>itoe@ubuea.cm</span>
+		</div>
+		<div><span class="text-primary email__font__weight email__padding">password:</span> <span>testuser/2022</span></div>
 </div>
+<div class="d-flex justify-content-center">
+	<div>
+		<span class="text-primary email__font__weight">	email: </span> <span>fep@ubuea.cm</span>
+		</div>
+		<div><span class="text-primary email__font__weight email__padding">password:</span> <span>testuser/2022</span></div>
+</div>
+<h3 class="text-center text-success">To register a new account as a student use of the following email</h3>
+<div class="text-center">
+	<div>
+		<span class="text-primary email__font__weight">	email: </span> <span>testone@ubuea.cm</span>
 	</div>
-	use the following 
+	<div>
+		<span class="text-primary email__font__weight">	email: </span> <span>testtwo@ubuea.cm</span>
+	</div>
 </div>
-</div> -->
-
-
 {% endblock content %}
