--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -61,6 +61,7 @@
 		
 	</div>
 </div>
+<h2 class="text-danger text-center">Reset password not yet implemented</h2>
 <h3 class="text-center text-success">To login as staff use use one of the following credentails</h3>
 <div class="d-flex justify-content-center">
 	<div>
