--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -65,7 +65,7 @@
 <h3 class="text-center text-success">To login as staff use use one of the following credentails</h3>
 <div class="d-flex justify-content-center">
 	<div>
-		<span class=" text-primary email__font__weight">	email: </span> <span>fleur@ubuea.cm</span>
+		<span class=" text-primary email__font__weight">	email: </span> <span>zenabs@ubuea.cm</span>
 		</div>
 		<div><span class="text-primary email__font__weight email__padding">password:</span> <span>testuser/2022</span></div>
 </div>
