Update login view

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -63,6 +63,7 @@
 </div>
 <div class="text-center mt-2"><button class="border btn-info text-center click__me " id="click-me">click me</button></div>
 <div id="info" class="d-none">
+	<p class="text-center mt-3 h4"><a  href="https://www.loom.com/share/fcc082934a5840d6ab4d267627df4190" target="_blank" rel="noopener">Follow this link to understand to use the application</a></p>
 	<h2 class="text-danger text-center">Reset password not yet implemented</h2>
 <h3 class="text-center text-success">To login as staff use use one of the following credentails</h3>
 <div class="d-flex justify-content-center">
